Use of @Value for Reading Values from application.properties file

--- a/Annotations/src/main/resources/application.properties
+++ b/Annotations/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=Annotations
 server.port=9090
+
+mail.host=gmail.com
+mail.user=tasawar
+mail.email=taswar@volmatica.com
+mail.password=secret
