use of @ConfigurationProperties annotation to access app.peroperties values with the help of a class

--- a/Annotations/src/main/resources/application.properties
+++ b/Annotations/src/main/resources/application.properties
@@ -5,3 +5,9 @@ mail.host=gmail.com
 mail.user=tasawar
 mail.email=taswar@volmatica.com
 mail.password=secret
+
+# Top level app properties
+
+app.name=SpringAnnocation
+app.description=Description of SpringAnnocation 
+app.upload-dir=/uploads
