Bindig the Nested Properties to the JAVA Class from app.properties file

--- a/Annotations/src/main/resources/application.properties
+++ b/Annotations/src/main/resources/application.properties
@@ -11,3 +11,11 @@ mail.password=secret
 app.name=SpringAnnocation
 app.description=Description of SpringAnnocation 
 app.upload-dir=/uploads
+
+
+#Nested object properties
+app.security.username=javaguides
+app.security.password=secret
+app.security.roles=USER,ADMIN,GUEST
+app.security.enabled=true
+
