mapping properties to a Map directly through @ConfigurationProperties annotations

--- a/Annotations/src/main/resources/application.properties
+++ b/Annotations/src/main/resources/application.properties
@@ -19,3 +19,10 @@ app.security.password=secret
 app.security.roles=USER,ADMIN,GUEST
 app.security.enabled=true
 
+
+# MAP Properties
+
+app.security.permissions.add=true
+app.security.permissions.update=false
+app.security.permissions.delete=false
+app.security.permissions.read=true
